adjust the spacing between input fields and buttons

--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -2,8 +2,8 @@
 <link rel="stylesheet" href="/stylesheets/style.css" />
 <%- include('../partials/nav') %>
 
-<div class="grid-wrapper"> <!-- Add this div -->
-  <div class="grid-content"> <!-- Add this div -->
+<div class="grid-wrapper">
+  <div class="grid-content"> 
     <div class="body-content">
         <div class="row">
           <h1 class="center m-bottom font-heavy">We love video games here!</h1>
