--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,6 +65,7 @@ button {
   border: 1px solid #fff;
   border-radius: 4px;
   margin: 20px 0;
+  margin-top: 0px;
   cursor: pointer;
   transition: all 0.3s ease;
   outline: none;
@@ -80,6 +81,14 @@ button:active {
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.25);
 }
 
+label {
+  font-size: 1rem;
+  font-weight: bold;
+  color: #333;
+  letter-spacing: 1px;
+}
+
+
 .styled-element {
   height: 48px;
   width: 180px;
@@ -91,6 +100,7 @@ button:active {
   border: 1px solid #FE7880;
   border-radius: 4px;
   margin: 20px 0;
+  margin-right: 20px;
   cursor: pointer;
   transition: all 0.3s ease;
   outline: none;
