--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -117,6 +117,16 @@ footer p {
   color: #fff;
 }
 
+.table-cell {
+  padding-top: 8px;
+  padding-right: 60px;
+  padding-bottom: 8px; 
+  padding-left: 60px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .grid-wrapper {
   display: grid;
   grid-template-rows: 1fr auto;
@@ -125,6 +135,13 @@ footer p {
 
 .grid-content {
   width: 100%;
+}
+
+.line {
+  height: 1px;
+  width: 100%;
+  background: #D6D6D8;
+  margin: 80px 0;
 }
 
 
