--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -90,7 +90,7 @@ label {
 
 
 .styled-element {
-  height: 48px;
+  height: 32px;
   width: 180px;
   text-align: center;
   color: #636366;
@@ -142,6 +142,12 @@ footer p {
   width: 100%;
   background: #D6D6D8;
   margin: 80px 0;
+}
+
+input[type="text"],
+select {
+  height: 32px;
+  width: 150px;
 }
 
 
