--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -64,7 +64,7 @@
               <% } else { %>
                 <p>You must be logged in to add a review.</p>
                 <% } %>
-                  <h3>Reviews:</h3> 
+                  <h3>All Reviews:</h3> 
                   <ul>
                     <% game.reviews.forEach(review=> { %>
                       <li>
