--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -55,12 +55,6 @@ nav > a {
   justify-content: center;
 }
 
-.game-info {
-  display: flex;
-  flex-direction: column;
-}
-
-
 button {
   height: 48px;
   width: 180px;
@@ -99,12 +93,6 @@ label {
   font-weight: bold;
   color: #333;
   letter-spacing: 1px;
-}
-
-
-.form-inline {
-  display: flex;
-  align-items: center;
 }
 
 .styled-element {
@@ -146,16 +134,6 @@ footer p {
   color: #fff;
 }
 
-.show-table-cell {
-  padding-top: 8px;
-  padding-right: 60px;
-  padding-bottom: 8px; 
-  padding-left: 1px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 .table-cell {
   padding-top: 8px;
   padding-right: 60px;
@@ -165,7 +143,6 @@ footer p {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 
 .grid-wrapper {
   display: grid;
@@ -191,12 +168,17 @@ select {
 }
 
 .status-label {
-  display: inline-block;
-  margin-bottom: 4px;
+  margin-top: -50px;
+  margin-bottom: 40px;
 }
 
 .status-select {
-  margin-left: 50px;
+  margin-left: 49px;
+}
+
+.status-and-review {
+  margin-top: -20px;
+  margin-left: 3px;
 }
 
 
