--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -13,83 +13,84 @@
           <button class="small-button">Edit Game</button>
         </a>
         <% } %>
-      <div class="game-info">
-        <table class="game-details">
-          <tr>
-            <th style="text-align: left;">Title:</th>
-            <td class="show-table-cell">
-              <%= game.title %>
-            </td>
-          </tr>
-          <tr>
-            <th style="text-align: left;">Platform:</th>
-            <td class="show-table-cell">
-              <%= game.platform %>
-            </td>
-          </tr>
-          <tr>
-            <th style="text-align: left;">Release Year:</th>
-            <td class="show-table-cell">
-              <%= game.releaseYear %>
-            </td>
-          </tr>
-          <tr>
-            <th style="text-align: left;">Genre:</th>
-            <td class="show-table-cell">
-              <%= game.genre %>
-            </td>
-          </tr>
-          <tr>
-            <th style="text-align: left;">Developer:</th>
-            <td class="show-table-cell">
-              <%= game.developer %>
-            </td>
-          </tr>
-        </table>
-        <div class="form-group form-inline">
-          <label for="completion-status-select" class="status-label">Status:</label>
-          <select name="completion-status" id="completion-status-select" class="styled-element small-select status-select">
-            <option value="Complete">Complete</option>
-            <option value="Incomplete">Incomplete</option>
-            <option value="In-progress">In progress</option>
-          </select>            
-        </div>
-      </div>
-      <% if (user) { %>
-        <% if (!hasReviewed) { %>
-          <form id="add-review-form" action="/games/<%= game._id %>/reviews" method="POST">
-            <label for="content-textarea">Write a review:</label>
-            <br>
-            <textarea name="text" id="content-textarea" placeholder="How was it?"></textarea>
-            <br>
-            <label for="rating-select">Rating:</label>
-            <select name="rating" id="rating-select">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5" selected>5</option>
-            </select>
-            <br>
-            <button type="submit" class="small-button">Add Review</button>
-          </form>
-          <% } %>
-            <% } else { %>
-              <p>You must be logged in to add a review.</p>
-              <% } %>
-                <h3>All Reviews:</h3>
-                <ul>
-                  <% game.reviews.forEach(review=> { %>
-                    <li>
-                      <%= review.text %> - <%= review.rating %>/5
-                          <% if (user?.profile._id.equals(review.owner._id)) { %>
-                            <a href="/games/<%= game._id %>/reviews/<%= review._id %>/edit">
-                              <button>Edit Review</button>
-                            </a>
-                            <% } %>
-                    </li>
-                    <% }) %>
-                </ul>
+          <div class="grd-display">
+            <table>
+              <tr>
+                <th class="left col-3">Title:</th>
+                <td class="left col-9">
+                  <%= game.title %>
+                </td>
+              </tr>
+              <tr>
+                <th class="left col-3">Platform:</th>
+                <td class="left col-9">
+                  <%= game.platform %>
+                </td>
+              </tr>
+              <tr>
+                <th class="left col-3">Release Year:</th>
+                <td class="left col-9">
+                  <%= game.releaseYear %>
+                </td>
+              </tr>
+              <tr>
+                <th class="left col-3">Genre:</th>
+                <td class="left col-9">
+                  <%= game.genre %>
+                </td>
+              </tr>
+              <tr>
+                <th class="left col-3">Developer:</th>
+                <td class="left col-9">
+                  <%= game.developer %>
+                </td>
+              </tr>
+            </table>
+          </div>
+          <div class="status-and-review">
+              <label for="completion-status-select" class="status-label">Status:</label>
+              <select name="completion-status" id="completion-status-select"
+                class="styled-element small-select status-select">
+                <option value="Complete">Complete</option>
+                <option value="Incomplete">Incomplete</option>
+                <option value="In-progress">In progress</option>
+              </select>
+            <% if (user) { %>
+              <% if (!hasReviewed) { %>
+                <form id="add-review-form" action="/games/<%= game._id %>/reviews" method="POST">
+                  <label for="content-textarea">Write a review:</label>
+                  <br>
+                  <textarea name="text" id="content-textarea" placeholder="How was it?"></textarea>
+                  <br>
+                  <label for="rating-select">Rating:</label>
+                  <select name="rating" id="rating-select">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5" selected>5</option>
+                  </select>
+                  <br>
+                  <button type="submit" class="small-button">Add Review</button>
+                </form>
+                <% } %>
+                  <% } else { %>
+                    <p>You must be logged in to add a review.</p>
+                    <% } %>
+                      <h3>All Reviews:</h3>
+                      <ul>
+                        <% game.reviews.forEach(review=> { %>
+                          <li>
+                            <%= review.text %> - <%= review.rating %>/5
+                                <% if (user?.profile._id.equals(review.owner._id)) { %>
+                                  <a href="/games/<%= game._id %>/reviews/<%= review._id %>/edit">
+                                    <button>Edit Review</button>
+                                  </a>
+                                  <% } %>
+                          </li>
+                          <% }) %>
+                      </ul>
+          </div>
     </div>
 
     <%- include('../partials/footer') %>
