restyle edit review page, nav bar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -185,6 +185,9 @@ select {
   width: 80%;
   height: 150px; 
   resize: none;
+  padding: 0;
+  text-align: left;
+  vertical-align: top;
 }
 
 .review-text {
