--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/html-head') %>
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <%- include('../partials/nav') %>
-    <div class="conainer">
+    <div class="container">
       <div class="status-and-review">
         <h1>Edit Review for 🕹️ <%= game.title %>
         </h1>
