populate the reviews show more/lestt functionality to game edit page

--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -68,16 +68,48 @@
                   <ul>
                     <% game.reviews.forEach(review=> { %>
                       <li>
-                        <%= review.text %> - <%= review.rating %>/5
-                            <% if (user?.profile._id.equals(review.owner._id)) { %>
-                              <a href="/games/<%= game._id %>/reviews/<%= review._id %>/edit">
-                                <button>Edit Review</button>
-                              </a>
-                              <% } %>
+                        <div class="review-rating">
+                          <%= review.rating %>/5
+                        </div>
+                        <div class="review-text">
+                          <%= review.text %>
+                        </div>
+                        <button class="show-more small-button">Show More</button>
+                        <% if (user?.profile._id.equals(review.owner._id)) { %>
+                          <a href="/games/<%= game._id %>/reviews/<%= review._id %>/edit">
+                            <button class="small-button">Edit Review</button>
+                          </a>
+                          <% } %>
                       </li>
                       <% }) %>
-                  </ul>
+                  </ul>                  
       </section>
     </div>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const reviewTexts = document.querySelectorAll(".review-text")
+        const showMoreButtons = document.querySelectorAll(".show-more")
+    
+        reviewTexts.forEach((reviewText, index) => {
+          if (reviewText.scrollWidth > reviewText.clientWidth) {
+            showMoreButtons[index].style.display = "inline"
+          }
+        })
+    
+        showMoreButtons.forEach((button, index) => {
+          button.addEventListener("click", () => {
+            if (button.textContent === "Show More") {
+              reviewTexts[index].style.whiteSpace = "normal"
+              button.textContent = "Show Less"
+            } else {
+              reviewTexts[index].style.whiteSpace = "nowrap"
+              button.textContent = "Show More"
+            }
+          })
+        })
+      })
+    </script>
+    
 
     <%- include('../partials/footer') %>
