--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,23 @@
 <%- include('./partials/html-head') %>
 <%- include('./partials/nav') %>
 
-<main>
-  <h1 class="center m-bottom">hey <%= user ? user.profile.name : "friend!" %></h1>
-  <h2 class="center m-bottom">Welcome to FUNventory app!</h2>
-  <h3 class="center m-bottom">Log in to start all the fun!</h3>
-  <% if (user?.profile.avatar) { %>
-    <div>
-      <img
-        src="<%= user.profile.avatar %>"
-        alt="<%= user.profile.name %> avatar"
-      />
-    </div>
-  <% } %>
-</main>
+<div class="grid-wrapper">
+  <div class="grid-content">
+    <main>
+      <h1 class="center m-bottom">hey <%= user ? user.profile.name : "friend!" %></h1>
+      <h2 class="center m-bottom">Welcome to FUNventory app!</h2>
+      <h3 class="center m-bottom">Log in to start all the fun!</h3>
+      <% if (user?.profile.avatar) { %>
+        <div>
+          <img
+            src="<%= user.profile.avatar %>"
+            alt="<%= user.profile.name %> avatar"
+          />
+        </div>
+      <% } %>
+    </main>
+  </div>
 
-<%- include('./partials/footer') %>
+  <%- include('./partials/footer') %>
+</div>
+
