--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -2,114 +2,126 @@
   <link rel="stylesheet" href="/public/stylesheets/show.css" />
   <%- include('../partials/nav') %>
 
-    <div class="container">
-      <section>
-        <p>
-          <%= game.owner.name %> added this game
-        </p>
-        <form action="/games/<%= game._id %>?_method=PUT" method="POST">
-          <div class="form-group" style="margin-bottom: 20px;">
-            <label for="title-input" style="display: block; margin-bottom: 5px;">Title:</label>
-            <input type="text" name="title" value="<%= game.title %>" id="title-input" class="styled-element" style="margin-top: -3px;">
+    <div class="grid-wrapper">
+      <div class="grid-content">
+        <div class="container">
+          <div class="container">
+            <section>
+              <p>
+                <%= game.owner.name %> added this game
+              </p>
+              <form action="/games/<%= game._id %>?_method=PUT" method="POST">
+                <div class="form-group" style="margin-bottom: 20px;">
+                  <label for="title-input" style="display: block; margin-bottom: 5px;">Title:</label>
+                  <input type="text" name="title" value="<%= game.title %>" id="title-input" class="styled-element"
+                    style="margin-top: -3px;">
+                </div>
+                <div class="form-group" style="margin-bottom: 20px;">
+                  <label for="platform-input" style="display: block; margin-bottom: 5px;">Platform:</label>
+                  <input type="text" name="platform" value="<%= game.platform %>" id="platform-input"
+                    class="styled-element" style="margin-top: -3px;">
+                </div>
+                <div class="form-group" style="margin-bottom: 20px;">
+                  <label for="releaseYear-input" style="display: block; margin-bottom: 5px;">Release Year:</label>
+                  <input type="number" name="releaseYear" value="<%= game.releaseYear %>" id="releaseYear-input"
+                    class="styled-element" style="margin-top: -3px;">
+                </div>
+                <div class="form-group" style="margin-bottom: 20px;">
+                  <label for="genre-input" style="display: block; margin-bottom: 5px;">Genre:</label>
+                  <input type="text" name="genre" value="<%= game.genre %>" id="genre-input" class="styled-element"
+                    style="margin-top: -3px;">
+                </div>
+                <div class="form-group" style="margin-bottom: 20px;">
+                  <label for="developer-input" style="display: block; margin-bottom: 5px;">Developer:</label>
+                  <input type="text" name="developer" value="<%= game.developer %>" id="developer-input"
+                    class="styled-element" style="margin-top: -3px;">
+                </div>
+                <div class="form-group" style="margin-bottom: 20px;">
+                  <label for="completion-status-select" style="display: block; margin-bottom: 5px;">Status:</label>
+                  <select name="completion-status" id="completion-status-select" class="styled-element"
+                    style="margin-top: -3px;">
+                    <option value="Complete" <%=game.status==='Complete' ? 'selected' : '' %>>Complete</option>
+                    <option value="Incomplete" <%=game.status==='Incomplete' ? 'selected' : '' %>>Incomplete</option>
+                    <option value="In-progress" <%=game.status==='In-progress' ? 'selected' : '' %>>In progress</option>
+                  </select>
+                </div>
+
+                <button type="submit">Save 🕹️</button>
+              </form>
+              <form action="/games/<%= game._id %>?_method=DELETE" method="POST">
+                <button type="submit">Delete 🕹️</button>
+              </form>
+              <% if (user) { %>
+                <% if (!hasReviewed) { %>
+                  <form id="add-review-form" action="/games/<%= game._id %>/reviews" method="POST">
+                    <label for="content-textarea">Write a review:</label>
+                    <br>
+                    <textarea name="text" id="content-textarea" placeholder="How was it?"
+                      class="styled-element"></textarea>
+                    <br>
+                    <label for="rating-select">Rating:</label>
+                    <select name="rating" id="rating-select" class="styled-element">
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5" selected>5</option>
+                    </select>
+                    <br>
+                    <button type="submit">Add Review</button>
+                  </form>
+                  <% } %>
+                    <% } else { %>
+                      <p>You must be logged in to add a review.</p>
+                      <% } %>
+                        <h3>All Reviews:</h3>
+                        <ul>
+                          <% game.reviews.forEach(review=> { %>
+                            <li>
+                              <div class="review-rating">
+                                <%= review.rating %>/5
+                              </div>
+                              <div class="review-text">
+                                <%= review.text %>
+                              </div>
+                              <button class="show-more small-button">Show More</button>
+                              <% if (user?.profile._id.equals(review.owner._id)) { %>
+                                <a href="/games/<%= game._id %>/reviews/<%= review._id %>/edit">
+                                  <button class="small-button">Edit Review</button>
+                                </a>
+                                <% } %>
+                            </li>
+                            <% }) %>
+                        </ul>
+            </section>
           </div>
-          <div class="form-group" style="margin-bottom: 20px;">
-            <label for="platform-input" style="display: block; margin-bottom: 5px;">Platform:</label>
-            <input type="text" name="platform" value="<%= game.platform %>" id="platform-input" class="styled-element" style="margin-top: -3px;">
-          </div>
-          <div class="form-group" style="margin-bottom: 20px;">
-            <label for="releaseYear-input" style="display: block; margin-bottom: 5px;">Release Year:</label>
-            <input type="number" name="releaseYear" value="<%= game.releaseYear %>" id="releaseYear-input" class="styled-element" style="margin-top: -3px;">
-          </div>
-          <div class="form-group" style="margin-bottom: 20px;">
-            <label for="genre-input" style="display: block; margin-bottom: 5px;">Genre:</label>
-            <input type="text" name="genre" value="<%= game.genre %>" id="genre-input" class="styled-element" style="margin-top: -3px;">
-          </div>
-          <div class="form-group" style="margin-bottom: 20px;">
-            <label for="developer-input" style="display: block; margin-bottom: 5px;">Developer:</label>
-            <input type="text" name="developer" value="<%= game.developer %>" id="developer-input" class="styled-element" style="margin-top: -3px;">
-          </div>
-          <div class="form-group" style="margin-bottom: 20px;">
-            <label for="completion-status-select" style="display: block; margin-bottom: 5px;">Status:</label>
-            <select name="completion-status" id="completion-status-select" class="styled-element" style="margin-top: -3px;">
-              <option value="Complete" <%=game.status==='Complete' ? 'selected' : '' %>>Complete</option>
-              <option value="Incomplete" <%=game.status==='Incomplete' ? 'selected' : '' %>>Incomplete</option>
-              <option value="In-progress" <%=game.status==='In-progress' ? 'selected' : '' %>>In progress</option>
-            </select>
-          </div>
-        
-          <button type="submit">Save 🕹️</button>
-        </form>
-        <form action="/games/<%= game._id %>?_method=DELETE" method="POST">
-          <button type="submit">Delete 🕹️</button>
-        </form>
-        <% if (user) { %>
-          <% if (!hasReviewed) { %>
-            <form id="add-review-form" action="/games/<%= game._id %>/reviews" method="POST">
-              <label for="content-textarea">Write a review:</label>
-              <br>
-              <textarea name="text" id="content-textarea" placeholder="How was it?" class="styled-element"></textarea>
-              <br>
-              <label for="rating-select">Rating:</label>
-              <select name="rating" id="rating-select" class="styled-element">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5" selected>5</option>
-              </select>
-              <br>
-              <button type="submit">Add Review</button>
-            </form>
-            <% } %>
-              <% } else { %>
-                <p>You must be logged in to add a review.</p>
-                <% } %>
-                  <h3>All Reviews:</h3> 
-                  <ul>
-                    <% game.reviews.forEach(review=> { %>
-                      <li>
-                        <div class="review-rating">
-                          <%= review.rating %>/5
-                        </div>
-                        <div class="review-text">
-                          <%= review.text %>
-                        </div>
-                        <button class="show-more small-button">Show More</button>
-                        <% if (user?.profile._id.equals(review.owner._id)) { %>
-                          <a href="/games/<%= game._id %>/reviews/<%= review._id %>/edit">
-                            <button class="small-button">Edit Review</button>
-                          </a>
-                          <% } %>
-                      </li>
-                      <% }) %>
-                  </ul>                  
-      </section>
+
+          <script>
+            document.addEventListener("DOMContentLoaded", function () {
+              const reviewTexts = document.querySelectorAll(".review-text")
+              const showMoreButtons = document.querySelectorAll(".show-more")
+
+              reviewTexts.forEach((reviewText, index) => {
+                if (reviewText.scrollWidth > reviewText.clientWidth) {
+                  showMoreButtons[index].style.display = "inline"
+                }
+              })
+
+              showMoreButtons.forEach((button, index) => {
+                button.addEventListener("click", () => {
+                  if (button.textContent === "Show More") {
+                    reviewTexts[index].style.whiteSpace = "normal"
+                    button.textContent = "Show Less"
+                  } else {
+                    reviewTexts[index].style.whiteSpace = "nowrap"
+                    button.textContent = "Show More"
+                  }
+                })
+              })
+            })
+          </script>
+
+        </div>
+      </div>
+      <%- include('../partials/footer') %>
     </div>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const reviewTexts = document.querySelectorAll(".review-text")
-        const showMoreButtons = document.querySelectorAll(".show-more")
-    
-        reviewTexts.forEach((reviewText, index) => {
-          if (reviewText.scrollWidth > reviewText.clientWidth) {
-            showMoreButtons[index].style.display = "inline"
-          }
-        })
-    
-        showMoreButtons.forEach((button, index) => {
-          button.addEventListener("click", () => {
-            if (button.textContent === "Show More") {
-              reviewTexts[index].style.whiteSpace = "normal"
-              button.textContent = "Show Less"
-            } else {
-              reviewTexts[index].style.whiteSpace = "nowrap"
-              button.textContent = "Show More"
-            }
-          })
-        })
-      })
-    </script>
-    
-
-    <%- include('../partials/footer') %>
