--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,10 +41,15 @@ nav {
   color: #1a1a1a;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
   padding: 10px;
   min-height: 60px;
 }
+
+.nav-items {
+  display: flex;
+  margin-left: auto;
+}
+
 
 nav > a {
   margin: 8px 24px;
@@ -53,6 +58,7 @@ nav > a {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: auto;
 }
 
 button {
