--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,29 +1,21 @@
 <% if (!user) { %>
   <script defer src="https://accounts.google.com/gsi/client"></script>
-<% } %>
-</head>
-<body>
-<nav>
-  <p>FUNventory</p>
-  <a href="/games">🕹️</a>
-  <a href="/profiles">👾</a>
-  <% if (user) { %>
-    <a href="/auth/logout">🚪</a>
-  <% } else { %>
-    <div 
-      id="g_id_onload"
-      data-client_id="<%= googleClientID %>"
-      data-login_uri="/auth/google"
-      data-auto_prompt="false"
-    ></div>
-    <div 
-      class="g_id_signin"
-      data-type="standard"
-      data-size="large"
-      data-theme="outline"
-      data-text="sign_in_with"
-      data-shape="rectangular"
-      data-logo_alignment="left"
-    ></div>
   <% } %>
-</nav>
+    </head>
+
+    <body>
+      <nav>
+        <p class="brand">FUNventory</p>
+        <div class="nav-items"></div>
+        <a href="/games">🕹️</a>
+        <a href="/profiles">👾</a>
+        <% if (user) { %>
+          <a href="/auth/logout">🚪</a>
+          <% } else { %>
+            <div id="g_id_onload" data-client_id="<%= googleClientID %>" data-login_uri="/auth/google"
+              data-auto_prompt="false"></div>
+            <div class="g_id_signin" data-type="standard" data-size="large" data-theme="filled_black"
+              data-text="signin" data-shape="pill" data-logo_alignment="left"></div>
+            <% } %>
+              </div>
+      </nav>
