--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,7 +14,7 @@
           <% } else { %>
             <div id="g_id_onload" data-client_id="<%= googleClientID %>" data-login_uri="/auth/google"
               data-auto_prompt="false"></div>
-            <div class="g_id_signin" data-type="standard" data-size="large" data-theme="filled_black"
+            <div class="g_id_signin" data-type="icon" data-size="large" data-theme="filled_black"
               data-text="signin" data-shape="pill" data-logo_alignment="left"></div>
             <% } %>
               </div>
