add homepage redirection

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,9 @@
 
     <body>
       <nav>
-        <p class="brand">FUNventory</p>
+        <a href="/" class="brand-link">
+          <h3 class="brand">FUNventory</h3>
+        </a>
         <div class="nav-items"></div>
         <a href="/games">🕹️</a>
         <a href="/profiles">👾</a>
