--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12">
         <p>FUNventory<br/>
-        Made in 2023 by <a href="" target="_blank">Annie Kuxa</a><br/>
+        Made in 2023 by <a href="https://www.linkedin.com/in/annkuksa/" target="_blank">Annie Kuxa</a><br/>
       </div>
     </div>
   </div>
